Add hero section with image and content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <title>Kavitha Lingarajegowda</title>
   </head>
   <body>
+  <main class="hero">
+    <div class="hero-image">
+      <img src="profile.jpg" alt="Photo of Kavitha Lingarajegowda">
+    </div>
+
+    <div class="hero-content">
+      <h1>Kavitha Lingarajegowda</h1>
+      <p>Automotive Software Engineer · LLMs · Evaluation Systems</p>
+      <a href="about.html">About me</a>
+    </div>
+  </main>
   </body>
 </html>
 
