--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Kavitha Lingarajegowda</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
   <main class="hero">
