Refactor HTML structure for hero section

--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kavitha Lingarajegowda</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-  <main class="hero">
-    <div class="hero-image">
-      <img src="profile.jpg" alt="Photo of Kavitha Lingarajegowda">
-    </div>
 
-    <div class="hero-content">
-      <h1>Kavitha Lingarajegowda</h1>
-      <p>Automotive Software Engineer · LLMs · Evaluation Systems</p>
-      <a href="about.html">About me</a>
-    </div>
-  </main>
+  <body>
+    <!-- Full-width hero background -->
+    <section class="hero-wrapper">
+      <!-- Centered content container -->
+      <main class="hero">
+        <div class="hero-image">
+          <img
+            src="profile.jpg"
+            alt="Photo of Kavitha Lingarajegowda"
+          />
+        </div>
+
+        <div class="hero-content">
+          <h1>Kavitha Lingarajegowda</h1>
+          <p>Automotive Software Engineer · LLMs · Evaluation Systems</p>
+          <a href="about.html">About me</a>
+        </div>
+      </main>
+    </section>
   </body>
 </html>
-
