Add navbar and update hero section in index.html

--- a/index.html
+++ b/index.html
@@ -8,23 +8,30 @@
   </head>
 
   <body>
-    <!-- Full-width hero background -->
-    <section class="hero-wrapper">
-      <!-- Centered content container -->
-      <main class="hero">
-        <div class="hero-image">
-          <img
-            src="profile.jpg"
-            alt="Photo of Kavitha Lingarajegowda"
-          />
-        </div>
+    <!-- NAVBAR -->
+    <header class="navbar">
+      <div class="nav-left">Kavitha</div>
 
-        <div class="hero-content">
-          <h1>Kavitha Lingarajegowda</h1>
-          <p>Automotive Software Engineer · LLMs · Evaluation Systems</p>
-          <a href="about.html">About me</a>
-        </div>
-      </main>
+      <nav class="nav-links">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Resume</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+
+    <!-- HERO SECTION -->
+    <section class="hero">
+      <div class="hero-image">
+        <img src="profile.jpg" alt="Kavitha Lingarajegowda" />
+      </div>
+
+      <div class="hero-text">
+        <h1>Kavitha Lingarajegowda</h1>
+        <p>I’m an Automotive Software Engineer from Germany</p>
+        <a href="#" class="btn">About me</a>
+      </div>
     </section>
   </body>
 </html>
