--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header class="navbar">
       <div class="nav-left">Kavitha</div>
 
+      <!-- Desktop navigation -->
       <nav class="nav-links">
         <a href="#">Home</a>
         <a href="#">About</a>
@@ -19,7 +20,20 @@
         <a href="#">Portfolio</a>
         <a href="#">Contact</a>
       </nav>
+
+      <!-- Mobile hamburger -->
+      <div class="hamburger" onclick="openMenu()">☰</div>
     </header>
+
+    <!-- Mobile slide-in menu -->
+    <div class="mobile-menu" id="mobileMenu">
+      <span class="close-btn" onclick="closeMenu()">×</span>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Resume</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Contact</a>
+    </div>
 
     <!-- HERO SECTION -->
     <section class="hero">
@@ -33,5 +47,16 @@
         <a href="#" class="btn">About me</a>
       </div>
     </section>
+
+    <!-- JS for mobile menu -->
+    <script>
+      function openMenu() {
+        document.getElementById("mobileMenu").style.left = "0";
+      }
+
+      function closeMenu() {
+        document.getElementById("mobileMenu").style.left = "-100%";
+      }
+    </script>
   </body>
 </html>
