--- a/index.html
+++ b/index.html
@@ -8,44 +8,63 @@
   </head>
 
   <body>
-    <!-- Mobile Hamburger -->
-    <button class="hamburger" onclick="toggleMenu()">☰</button>
+    <!-- MOBILE HAMBURGER -->
+    <button class="hamburger" id="hamburger" aria-label="Open menu">☰</button>
 
-    <!-- Mobile Side Menu -->
-    <nav class="mobile-menu" id="mobileMenu">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Resume</a>
-      <a href="#">Portfolio</a>
-      <a href="#">Contact</a>
-    </nav>
+    <!-- MOBILE SLIDE MENU -->
+    <aside class="mobile-menu" id="mobileMenu">
+      <button class="close" id="closeMenu" aria-label="Close menu">×</button>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#resume">Resume</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#contact">Contact</a>
+    </aside>
 
-    <!-- Desktop Navigation -->
+    <!-- DESKTOP NAV -->
     <nav class="desktop-nav">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Resume</a>
-      <a href="#">Portfolio</a>
-      <a href="#">Contact</a>
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#resume">Resume</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#contact">Contact</a>
     </nav>
 
-    <!-- Hero -->
-    <main class="hero">
+    <!-- HERO -->
+    <main class="hero" id="home">
       <div class="hero-image">
-        <img src="profile.png" alt="Kavitha Lingarajegowda" />
+        <img
+          src="profile-cutout.png"
+          alt="Kavitha Lingarajegowda"
+        />
       </div>
 
       <div class="hero-content">
         <h1>Kavitha Lingarajegowda</h1>
         <p>Automotive Software Engineer · LLMs · Evaluation Systems</p>
-        <a href="#">About me</a>
+        <a href="#about" class="cta">About me</a>
       </div>
     </main>
 
+    <!-- JS: HAMBURGER WORKS LIKE GMAIL -->
     <script>
-      function toggleMenu() {
-        document.getElementById("mobileMenu").classList.toggle("open");
-      }
+      const hamburger = document.getElementById("hamburger");
+      const mobileMenu = document.getElementById("mobileMenu");
+      const closeMenu = document.getElementById("closeMenu");
+
+      hamburger.addEventListener("click", () => {
+        mobileMenu.classList.add("open");
+      });
+
+      closeMenu.addEventListener("click", () => {
+        mobileMenu.classList.remove("open");
+      });
+
+      mobileMenu.querySelectorAll("a").forEach((link) => {
+        link.addEventListener("click", () => {
+          mobileMenu.classList.remove("open");
+        });
+      });
     </script>
   </body>
 </html>
