--- a/index.html
+++ b/index.html
@@ -52,19 +52,40 @@
       const mobileMenu = document.getElementById("mobileMenu");
       const closeMenu = document.getElementById("closeMenu");
 
-      hamburger.addEventListener("click", () => {
+      function openMenu() {
         mobileMenu.classList.add("open");
+      }
+
+      function closeMenuFn() {
+          mobileMenu.classList.remove("open");
+      }
+
+      // Toggle when clicking hamburger
+      hamburger.addEventListener("click", (e) => {
+        e.stopPropagation();
+        mobileMenu.classList.toggle("open");
       });
 
+  // Close when clicking X
       closeMenu.addEventListener("click", () => {
-        mobileMenu.classList.remove("open");
+        closeMenuFn();
       });
 
+  // Close when clicking anywhere outside menu
+      document.addEventListener("click", (e) => {
+        if (mobileMenu.classList.contains("open")) {
+          if (!mobileMenu.contains(e.target) && e.target !== hamburger) {
+            closeMenuFn();
+          }
+        }
+      });
+
+  // Close when clicking a menu link
       mobileMenu.querySelectorAll("a").forEach((link) => {
         link.addEventListener("click", () => {
-          mobileMenu.classList.remove("open");
+          closeMenuFn();
         });
       });
-    </script>
+  </script>
   </body>
 </html>
