Update About link to point to about.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="hero-content">
         <h1>Kavitha Lingarajegowda</h1>
         <p>Automotive Software Engineer · LLMs · Evaluation Systems</p>
-        <a href="#about" class="cta">About me</a>
+        <a href="about.html" class="cta">About me</a>
       </div>
     </main>
 
