Refactor about.html by removing comment and updating speed
Removed comment about hamburger menu and adjusted speed variable.

--- a/about.html
+++ b/about.html
@@ -54,7 +54,6 @@
     </main>
 
     <script>
-      /* Hamburger menu */
       const hamburger = document.getElementById("hamburger");
       const mobileMenu = document.getElementById("mobileMenu");
       const closeMenu = document.getElementById("closeMenu");
@@ -96,7 +95,7 @@ and doing difficult things properly.`;
 
       const target = document.getElementById("typewriter");
       let index = 0;
-      const speed = 20; // ~3–5 seconds total
+      const speed = 20;
 
       function type() {
         if (index < text.length) {
