--- a/index.html
+++ b/index.html
@@ -8,35 +8,28 @@
   </head>
 
   <body class="home-page">
-    <!-- MOBILE HAMBURGER -->
-    <button class="hamburger" id="hamburger" aria-label="Open menu">☰</button>
+    <button class="hamburger" id="hamburger">☰</button>
 
-    <!-- MOBILE SLIDE MENU -->
     <aside class="mobile-menu" id="mobileMenu">
-      <button class="close" id="closeMenu" aria-label="Close menu">×</button>
+      <button class="close" id="closeMenu">×</button>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
       <a href="resume.html">Resume</a>
       <a href="portfolio.html">Portfolio</a>
+      <a href="achievements.html">Achievements</a>
       <a href="contact.html">Contact</a>
     </aside>
 
-    <!-- DESKTOP NAV -->
     <nav class="desktop-nav">
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
       <a href="resume.html">Resume</a>
       <a href="portfolio.html">Portfolio</a>
+      <a href="achievements.html">Achievements</a>
       <a href="contact.html">Contact</a>
     </nav>
 
-    <!-- HERO -->
-    <main class="hero" id="home">
+    <main class="hero">
       <div class="hero-image">
-        <img
-          src="profile-cutout.png"
-          alt="Kavitha Lingarajegowda"
-        />
+        <img src="profile-cutout.png" alt="Kavitha Lingarajegowda" />
       </div>
 
       <div class="hero-content">
@@ -46,45 +39,28 @@
       </div>
     </main>
 
-    <!-- JS: HAMBURGER WORKS LIKE GMAIL -->
     <script>
       const hamburger = document.getElementById("hamburger");
       const mobileMenu = document.getElementById("mobileMenu");
       const closeMenu = document.getElementById("closeMenu");
 
-      function openMenu() {
-        mobileMenu.classList.add("open");
-      }
-
-      function closeMenuFn() {
-        mobileMenu.classList.remove("open");
-      }
-
-      // Toggle when clicking hamburger
       hamburger.addEventListener("click", (e) => {
         e.stopPropagation();
         mobileMenu.classList.toggle("open");
       });
 
-      // Close when clicking X
       closeMenu.addEventListener("click", () => {
-        closeMenuFn();
+        mobileMenu.classList.remove("open");
       });
 
-      // Close when clicking anywhere outside menu
       document.addEventListener("click", (e) => {
-        if (mobileMenu.classList.contains("open")) {
-          if (!mobileMenu.contains(e.target) && e.target !== hamburger) {
-            closeMenuFn();
-          }
+        if (
+          mobileMenu.classList.contains("open") &&
+          !mobileMenu.contains(e.target) &&
+          e.target !== hamburger
+        ) {
+          mobileMenu.classList.remove("open");
         }
-      });
-
-      // Close when clicking a menu link
-      mobileMenu.querySelectorAll("a").forEach((link) => {
-        link.addEventListener("click", () => {
-          closeMenuFn();
-        });
       });
     </script>
   </body>
