--- a/about.html
+++ b/about.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body class="about-page">
-    <div class="page-bg about-bg"></div>
-
+  <body>
     <button class="hamburger" id="hamburger">☰</button>
 
     <aside class="mobile-menu" id="mobileMenu">
@@ -55,46 +53,33 @@
       const mobileMenu = document.getElementById("mobileMenu");
       const closeMenu = document.getElementById("closeMenu");
 
-      hamburger.addEventListener("click", (e) => {
-        e.stopPropagation();
-        mobileMenu.classList.toggle("open");
-      });
+      hamburger.addEventListener("click", () =>
+        mobileMenu.classList.toggle("open")
+      );
 
-      closeMenu.addEventListener("click", () => {
-        mobileMenu.classList.remove("open");
-      });
-
-      document.addEventListener("click", (e) => {
-        if (
-          mobileMenu.classList.contains("open") &&
-          !mobileMenu.contains(e.target) &&
-          e.target !== hamburger
-        ) {
-          mobileMenu.classList.remove("open");
-        }
-      });
+      closeMenu.addEventListener("click", () =>
+        mobileMenu.classList.remove("open")
+      );
 
       const text = `Hello, my name is Kavitha.
 
 I am a Junior AI Engineer working at the intersection of
 software engineering, large language models, and evaluation systems.
 
-I build AI systems that value correctness, reliability,
-and real-world impact.
+I build reliable AI systems and enjoy doing
+difficult things properly.`;
 
-I enjoy doing difficult things properly.`;
-
+      let i = 0;
       const target = document.getElementById("typewriter");
-      let index = 0;
 
       function type() {
-        if (index < text.length) {
-          target.textContent += text.charAt(index++);
-          setTimeout(type, 20);
+        if (i < text.length) {
+          target.textContent += text.charAt(i++);
+          setTimeout(type, 18);
         }
       }
 
-      window.addEventListener("load", type);
+      window.onload = type;
     </script>
   </body>
 </html>
