--- a/about.html
+++ b/about.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body>
-    <button class="hamburger" id="hamburger">☰</button>
+  <body class="about-page">
+    <button class="hamburger" id="hamburger" aria-label="Open menu">☰</button>
 
-    <aside class="mobile-menu" id="mobileMenu">
-      <button class="close" id="closeMenu">×</button>
+    <aside class="mobile-menu" id="mobileMenu" aria-label="Mobile menu">
+      <button class="close" id="closeMenu" aria-label="Close menu">×</button>
       <a href="index.html">Home</a>
       <a href="resume.html">Resume</a>
       <a href="portfolio.html">Portfolio</a>
@@ -19,7 +19,7 @@
       <a href="contact.html">Contact</a>
     </aside>
 
-    <nav class="desktop-nav">
+    <nav class="desktop-nav" aria-label="Primary navigation">
       <a href="index.html">Home</a>
       <a href="resume.html">Resume</a>
       <a href="portfolio.html">Portfolio</a>
@@ -49,28 +49,41 @@
     </main>
 
     <script>
+      // Mobile menu
       const hamburger = document.getElementById("hamburger");
       const mobileMenu = document.getElementById("mobileMenu");
       const closeMenu = document.getElementById("closeMenu");
 
-      hamburger.addEventListener("click", () =>
-        mobileMenu.classList.toggle("open")
-      );
+      hamburger.addEventListener("click", (e) => {
+        e.stopPropagation();
+        mobileMenu.classList.toggle("open");
+      });
 
-      closeMenu.addEventListener("click", () =>
-        mobileMenu.classList.remove("open")
-      );
+      closeMenu.addEventListener("click", () => {
+        mobileMenu.classList.remove("open");
+      });
 
+      document.addEventListener("click", (e) => {
+        if (
+          mobileMenu.classList.contains("open") &&
+          !mobileMenu.contains(e.target) &&
+          e.target !== hamburger
+        ) {
+          mobileMenu.classList.remove("open");
+        }
+      });
+
+      // Typewriter (fast)
       const text = `Hello, my name is Kavitha.
 
 I am a Junior AI Engineer working at the intersection of
 software engineering, large language models, and evaluation systems.
 
-I build reliable AI systems and enjoy doing
+I build reliable AI systems — and I enjoy doing
 difficult things properly.`;
 
-      let i = 0;
       const target = document.getElementById("typewriter");
+      let i = 0;
 
       function type() {
         if (i < text.length) {
@@ -79,7 +92,7 @@ difficult things properly.`;
         }
       }
 
-      window.onload = type;
+      window.addEventListener("load", type);
     </script>
   </body>
 </html>
