Update index.html again

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body>
+  <body class="home-page">
     <button class="hamburger" id="hamburger">☰</button>
 
     <aside class="mobile-menu" id="mobileMenu">
