--- a/resume.html
+++ b/resume.html
@@ -86,7 +86,7 @@
   <!-- Header with Download button -->
   <div class="resume-header">
     <a
-      href="assets/resume.pdf"
+      href="Kavitha_Lingarajegowda_Resume_2026.pdf"
       class="download-btn"
       download
     >
@@ -98,7 +98,7 @@
   <div class="resume-container">
     <div class="resume-frame-wrapper">
       <iframe
-        src="assets/resume.pdf"
+        src="Kavitha_Lingarajegowda_Resume_2026.pdf"
         title="Resume PDF"
       ></iframe>
     </div>
