--- a/resume.html
+++ b/resume.html
@@ -11,9 +11,13 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      background-color: #f5f5f5;
+      background-image: url("background2.jpg");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-    }
+  }
 
     /* Fixed top bar */
     .resume-header {
