--- a/resume.html
+++ b/resume.html
@@ -167,5 +167,10 @@
     </div>
   </div>
 
+  <script>
+    if (window.innerWidth <= 768) {
+      window.location.href = "Kavitha_Lingarajegowda_Resume_2026.pdf";
+    }
+  </script>
 </body>
 </html>
