--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-  }
+    }
 
     /* Fixed top bar */
     .resume-header {
@@ -77,48 +77,8 @@
       border: none;
     }
 
-    /* Desktop / Mobile visibility */
-    .desktop-only {
-      display: block;
-      height: 100%;
-    }
-
-    .mobile-only {
-      display: none;
-    }
-
-    /* Mobile fallback */
-    .resume-mobile-fallback {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      color: #333;
-      padding: 24px;
-    }
-
-    .open-btn {
-      margin-top: 16px;
-      padding: 12px 20px;
-      border: 1px solid #000;
-      border-radius: 6px;
-      text-decoration: none;
-      color: #000;
-      font-size: 16px;
-    }
-
-    /* Mobile behavior */
+    /* Mobile tuning */
     @media (max-width: 768px) {
-      .desktop-only {
-        display: none;
-      }
-
-      .mobile-only {
-        display: flex;
-      }
-
       .resume-frame-wrapper {
         max-width: 100%;
       }
@@ -142,35 +102,12 @@
   <!-- Resume viewer -->
   <div class="resume-container">
     <div class="resume-frame-wrapper">
-
-      <!-- Desktop / Laptop -->
       <iframe
         src="Kavitha_Lingarajegowda_Resume_2026.pdf"
         title="Kavitha Lingarajegowda Resume"
-        loading="lazy"
-        class="desktop-only"
       ></iframe>
-
-      <!-- Mobile fallback -->
-      <div class="mobile-only resume-mobile-fallback">
-        <p>Your resume will open in full screen.</p>
-        <a
-          href="Kavitha_Lingarajegowda_Resume_2026.pdf"
-          class="open-btn"
-          target="_blank"
-          rel="noopener"
-        >
-          Open Resume
-        </a>
-      </div>
-
     </div>
   </div>
 
-  <script>
-    if (window.innerWidth <= 768) {
-      window.location.href = "Kavitha_Lingarajegowda_Resume_2026.pdf";
-    }
-  </script>
 </body>
 </html>
