--- a/resume.html
+++ b/resume.html
@@ -103,7 +103,7 @@
   <div class="resume-container">
     <div class="resume-frame-wrapper">
       <iframe
-        src="Kavitha_Lingarajegowda_Resume_2026.pdf"
+        src="Kavitha_Lingarajegowda_Resume_2026.pdf#view=FitH"
         title="Kavitha Lingarajegowda Resume"
       ></iframe>
     </div>
