--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,9 @@
   <title>Resume</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- PDF.js CDN -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+
   <style>
     /* Page reset */
     html, body {
@@ -43,12 +46,6 @@
       color: #000;
       background-color: transparent;
       border-radius: 4px;
-      transition: background-color 0.2s ease;
-    }
-
-    .download-btn:hover {
-      background-color: #000;
-      color: #fff;
     }
 
     /* Main container */
@@ -69,15 +66,15 @@
       max-width: 900px;
       height: 100%;
       background-color: #ffffff;
+      overflow-y: auto;
+      padding: 24px 0;
     }
 
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
+    canvas {
+      display: block;
+      margin: 0 auto 24px auto;
     }
 
-    /* Mobile tuning */
     @media (max-width: 768px) {
       .resume-frame-wrapper {
         max-width: 100%;
@@ -88,7 +85,7 @@
 
 <body>
 
-  <!-- Header with Download button -->
+  <!-- Header -->
   <div class="resume-header">
     <a
       href="Kavitha_Lingarajegowda_Resume_2026.pdf"
@@ -101,13 +98,39 @@
 
   <!-- Resume viewer -->
   <div class="resume-container">
-    <div class="resume-frame-wrapper">
-      <iframe
-        src="Kavitha_Lingarajegowda_Resume_2026.pdf#view=FitH"
-        title="Kavitha Lingarajegowda Resume"
-      ></iframe>
+    <div class="resume-frame-wrapper" id="pdf-container">
+      <!-- PDF pages render here -->
     </div>
   </div>
+
+  <script>
+    const url = "Kavitha_Lingarajegowda_Resume_2026.pdf";
+
+    pdfjsLib.GlobalWorkerOptions.workerSrc =
+      "https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js";
+
+    const container = document.getElementById("pdf-container");
+
+    pdfjsLib.getDocument(url).promise.then(pdf => {
+      for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
+        pdf.getPage(pageNum).then(page => {
+          const viewport = page.getViewport({ scale: 1.5 });
+          const canvas = document.createElement("canvas");
+          const context = canvas.getContext("2d");
+
+          canvas.width = viewport.width;
+          canvas.height = viewport.height;
+
+          container.appendChild(canvas);
+
+          page.render({
+            canvasContext: context,
+            viewport: viewport
+          });
+        });
+      }
+    });
+  </script>
 
 </body>
 </html>
