--- a/resume.html
+++ b/resume.html
@@ -114,7 +114,17 @@
     pdfjsLib.getDocument(url).promise.then(pdf => {
       for (let pageNum = 1; pageNum <= pdf.numPages; pageNum++) {
         pdf.getPage(pageNum).then(page => {
-          const viewport = page.getViewport({ scale: 1.5 });
+
+          // Get container width
+          const containerWidth = container.clientWidth;
+
+          // Get PDF page at scale = 1
+          const unscaledViewport = page.getViewport({ scale: 1 });
+
+          // Calculate scale to fit width
+          const scale = containerWidth / unscaledViewport.width;
+          const viewport = page.getViewport({ scale });
+
           const canvas = document.createElement("canvas");
           const context = canvas.getContext("2d");
 
@@ -132,5 +142,3 @@
     });
   </script>
 
-</body>
-</html>
