--- a/achievements.html
+++ b/achievements.html
@@ -49,6 +49,43 @@
       .month-content {
         height: 40px;
       }
+      
+      .achievement-card {
+        max-width: 560px;
+        margin: 0 auto;
+        padding: 24px;
+        background: rgba(255, 255, 255, 0.96);
+        border-radius: 16px;
+        border: 1px solid rgba(0, 0, 0, 0.08);
+      }
+
+      .achievement-card h3 {
+        margin: 0 0 6px;
+        font-size: 18px;
+      }
+
+      .achievement-meta {
+        margin: 0 0 12px;
+        font-size: 13px;
+        color: rgba(0, 0, 0, 0.65);
+      }
+
+      .achievement-learned {
+        font-size: 14px;
+        line-height: 1.6;
+        margin-bottom: 18px;
+      }
+
+      .certificate-image {
+        width: 100%;
+        max-width: 320px;
+        display: block;
+        margin: 0 auto;
+        border-radius: 10px;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        background: #fff;
+      }
+
     </style>
   </head>
 
@@ -81,7 +118,28 @@
 
       <section class="month-section">
         <div class="month-title">December 2025</div>
-        <div class="month-content"></div>
+        <div class="month-content">
+          <article class="achievement-card">
+            <h3>SAP Certified – SAP Generative AI Developer</h3>
+
+            <p class="achievement-meta">SAP Certification</p>
+
+            <p class="achievement-learned">
+            Built a strong understanding of enterprise-grade Generative AI development,
+            including SAP Business AI, AI Core, and production-ready GenAI workflows.
+            </p>
+
+            <a href="Achievements/sap-generative-ai-developer-certificate.pdf">
+              <img
+                src="Achievements/sap-generative-ai-developer-badge.png"
+                alt="SAP Generative AI Developer Certificate"
+                class="certificate-image"
+              />
+            </a>
+          </article>
+          
+        </div>
+
       </section>
 
       <section class="month-section">
