--- a/achievements.html
+++ b/achievements.html
@@ -14,6 +14,7 @@
         margin: 0;
         padding: 0;
         min-height: 100%;
+        overflow-y: auto;
         background-image: url("background2.jpg");
         background-size: cover;
         background-position: center;
@@ -21,39 +22,42 @@
         background-attachment: fixed;
       }
 
-      /* Page wrapper */
+      @media (max-width: 768px) {
+        html,
+        body {
+          background-attachment: scroll;
+        }
+      }
+
       main.achievements-page {
         max-width: 900px;
         margin: 0 auto;
-        padding: 140px 16px 80px; /* space for nav + bottom scroll */
+        padding: 140px 16px 96px;
         text-align: center;
       }
 
-      /* Page title */
       main.achievements-page h1 {
         font-family: "Cinzel", serif;
         font-size: 36px;
-        margin-bottom: 64px;
-        color: #6b5ca5; /* dark lavender */
+        margin-bottom: 72px;
+        color: #6b5ca5;
       }
 
-      /* Month sections */
       .month-section {
-        margin-bottom: 96px; /* prevents overlap */
+        margin-bottom: 96px;
       }
 
       .month-title {
         font-family: "Cinzel", serif;
         font-size: 22px;
-        color: #6b5ca5; /* dark lavender */
+        color: #6b5ca5;
         letter-spacing: 1px;
-        margin-bottom: 36px;
+        margin-bottom: 40px;
       }
 
-      /* Achievement card */
       .achievement-card {
         max-width: 560px;
-        margin: 0 auto;
+        margin: 0 auto 48px;
         padding: 28px;
         background: rgba(255, 255, 255, 0.96);
         border-radius: 18px;
@@ -68,13 +72,14 @@
       .achievement-meta {
         margin: 0 0 14px;
         font-size: 13px;
-        color: rgba(0, 0, 0, 0.65);
+        color: #555;
       }
 
       .achievement-learned {
-        font-size: 14px;
-        line-height: 1.6;
+        font-size: 14.5px;
+        line-height: 1.7;
         margin-bottom: 22px;
+        color: #222;
       }
 
       .certificate-image {
@@ -90,8 +95,7 @@
   </head>
 
   <body>
-    <!-- ===== Navigation (IDENTICAL to index.html) ===== -->
-
+    <!-- Navigation -->
     <button class="hamburger" id="hamburger">☰</button>
 
     <aside class="mobile-menu" id="mobileMenu">
@@ -111,8 +115,7 @@
       <a href="contact.html">Contact</a>
     </nav>
 
-    <!-- ===== Page Content ===== -->
-
+    <!-- Content -->
     <main class="achievements-page">
       <h1>Achievements</h1>
 
@@ -124,17 +127,13 @@
           <h3>SAP Certified – SAP Generative AI Developer</h3>
           <div class="achievement-meta">SAP Certification</div>
           <p class="achievement-learned">
-            Built a strong understanding of enterprise-grade Generative AI
-            development, including SAP Business AI, AI Core, and
-            production-ready GenAI workflows.
+            Developed a strong understanding of enterprise-grade generative AI systems,
+            including SAP Business AI, AI Core, and production-ready GenAI workflows.
           </p>
-
           <a href="Achievements/sap-generative-ai-developer-certificate.pdf">
-            <img
-              src="Achievements/sap-generative-ai-developer-badge.png"
-              alt="SAP Generative AI Developer Certificate"
-              class="certificate-image"
-            />
+            <img src="Achievements/sap-generative-ai-developer-badge.png"
+                 class="certificate-image"
+                 alt="SAP Generative AI Developer Certificate" />
           </a>
         </article>
       </section>
@@ -142,15 +141,132 @@
       <!-- October 2025 -->
       <section class="month-section">
         <div class="month-title">October 2025</div>
+
+        <article class="achievement-card">
+          <h3>Getting Started with Generative AI</h3>
+          <div class="achievement-meta">IBM SkillsBuild</div>
+          <p class="achievement-learned">
+            Built foundational knowledge of generative AI concepts, applications,
+            and responsible AI principles.
+          </p>
+          <a href="Achievements/ibm-getting-started-generative-ai-certificate.pdf">
+            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
+                 class="certificate-image" />
+          </a>
+        </article>
+
+        <article class="achievement-card">
+          <h3>GenAI Powered Data Analytics – Job Simulation</h3>
+          <div class="achievement-meta">Forage × Tata</div>
+          <p class="achievement-learned">
+            Applied generative AI techniques to data analysis, insight generation,
+            and business-oriented reporting.
+          </p>
+          <a href="Achievements/forage-tata-genai-data-analytics-certificate.pdf">
+            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
+                 class="certificate-image" />
+          </a>
+        </article>
+
+        <article class="achievement-card">
+          <h3>GenAI Job Simulation</h3>
+          <div class="achievement-meta">Forage × BCG X</div>
+          <p class="achievement-learned">
+            Explored practical GenAI use cases in consulting-style business scenarios,
+            focusing on solution design and impact.
+          </p>
+          <a href="Achievements/forage-bcgx-genai-certificate.pdf">
+            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
+                 class="certificate-image" />
+          </a>
+        </article>
+
+        <article class="achievement-card">
+          <h3>Data Science Job Simulation</h3>
+          <div class="achievement-meta">Forage × British Airways</div>
+          <p class="achievement-learned">
+            Worked on real-world airline datasets to derive insights using
+            data science and analytical techniques.
+          </p>
+          <a href="Achievements/forage-british-airways-data-science-certificate.pdf">
+            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
+                 class="certificate-image" />
+          </a>
+        </article>
+
+        <article class="achievement-card">
+          <h3>Project Management Job Simulation</h3>
+          <div class="achievement-meta">Forage × Siemens Mobility</div>
+          <p class="achievement-learned">
+            Gained experience in project planning, KPI tracking, and execution
+            within large-scale engineering environments.
+          </p>
+          <a href="Achievements/forage-siemens-mobility-project-management-certificate.pdf">
+            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
+                 class="certificate-image" />
+          </a>
+        </article>
+
+        <article class="achievement-card">
+          <h3>Project Management Job Simulation</h3>
+          <div class="achievement-meta">Forage × CBRE</div>
+          <p class="achievement-learned">
+            Learned structured project workflows, stakeholder coordination,
+            and execution best practices.
+          </p>
+          <a href="Achievements/forage-cbre-project-management-certificate.pdf">
+            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
+                 class="certificate-image" />
+          </a>
+        </article>
+
+        <article class="achievement-card">
+          <h3>Software Engineer Skill Certification</h3>
+          <div class="achievement-meta">HackerRank</div>
+          <p class="achievement-learned">
+            Validated core software engineering skills including problem solving,
+            logic building, and code quality.
+          </p>
+          <a href="Achievements/hackerrank-software-engineer-certificate.pdf">
+            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
+                 class="certificate-image" />
+          </a>
+        </article>
+
+        <article class="achievement-card">
+          <h3>Python (Basic) Skill Certification</h3>
+          <div class="achievement-meta">HackerRank</div>
+          <p class="achievement-learned">
+            Demonstrated foundational Python programming skills, including data
+            types, control flow, and basic problem solving.
+          </p>
+          <a href="Achievements/hackerrank-python-basic-certificate.pdf">
+            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
+                 class="certificate-image" />
+          </a>
+        </article>
       </section>
 
       <!-- September 2025 -->
       <section class="month-section">
         <div class="month-title">September 2025</div>
+
+        <article class="achievement-card">
+          <h3>Introduction to Transformer-Based NLP</h3>
+          <div class="achievement-meta">NVIDIA</div>
+          <p class="achievement-learned">
+            Learned the fundamentals of transformer architectures, attention
+            mechanisms, and their role in modern NLP systems.
+          </p>
+          <a href="Achievements/nvidia-transformer-nlp-certificate.pdf">
+            <img src="Achievements/ibm-getting-started-generative-ai-badge.png"
+                 class="certificate-image" />
+          </a>
+        </article>
       </section>
     </main>
 
-    <!-- ===== Navigation JS (IDENTICAL to index.html) ===== -->
+    <!-- Navigation JS -->
     <script>
       const hamburger = document.getElementById("hamburger");
       const mobileMenu = document.getElementById("mobileMenu");
