Update achievements.html 4

--- a/achievements.html
+++ b/achievements.html
@@ -38,7 +38,8 @@
       font-size: 36px;
       margin-bottom: 72px;
       color: #6b5ca5;
-      text-transform: none;
+      text-transform: none !important;
+      font-variant: normal !important;
     }
 
     .month-section {
@@ -50,7 +51,8 @@
       font-size: 22px;
       color: #6b5ca5;
       margin-bottom: 40px;
-      text-transform: none;
+      text-transform: none !important;
+      font-variant: normal !important;
     }
 
     .achievement-card {
@@ -65,24 +67,28 @@
     .achievement-card h3 {
       margin: 0 0 8px;
       font-size: 18px;
-      color: #111;
+      color: #111 !important;
       font-weight: 700;
-      text-transform: none;
+      text-transform: none !important;
+      font-variant: normal !important;
     }
 
     .achievement-meta {
       font-size: 13px;
-      color: #444;
+      color: #444 !important;
       margin-bottom: 14px;
       font-weight: 500;
+      text-transform: none !important;
     }
 
     .achievement-learned {
       font-size: 14.5px;
       line-height: 1.7;
       margin-bottom: 22px;
-      color: #1f1f1f;
-      text-transform: none;
+      color: #1f1f1f !important;
+      text-transform: none !important;
+      font-variant: normal !important;
+      letter-spacing: 0 !important;
     }
 
     .certificate-image {
@@ -167,7 +173,7 @@
         <h3>GenAI Job Simulation</h3>
         <div class="achievement-meta">Forage × BCG X</div>
         <p class="achievement-learned">
-          Explored practical GenAI use cases in consulting-style problem solving scenarios.
+          Explored practical GenAI use cases in consulting-style problem-solving scenarios.
         </p>
         <a href="Achievements/forage-bcgx-genai-certificate.pdf">
           <img src="Achievements/forage-bcgx-genai-certificate.png" class="certificate-image" alt="BCG X GenAI" />
@@ -192,7 +198,7 @@
           Gained experience in structured project planning, execution, and stakeholder coordination.
         </p>
         <a href="Achievements/forage-siemens-mobility-project-management-certificate.pdf">
-          <img src="Achievements/forage-siemens-mobility-project-management-certificate.png" class="certificate-image" alt="Siemens Mobility PM" />
+          <img src="Achievements/forage-siemens-mobility-project-management-certificate.png" class="certificate-image" alt="Siemens Mobility Project Management" />
         </a>
       </article>
 
@@ -200,10 +206,10 @@
         <h3>Project Management Job Simulation</h3>
         <div class="achievement-meta">Forage × CBRE</div>
         <p class="achievement-learned">
-          Learned project workflows, milestone tracking, and professional documentation practices.
+          Learned professional project workflows, milestone tracking, and documentation practices.
         </p>
         <a href="Achievements/forage-cbre-project-management-certificate.pdf">
-          <img src="Achievements/forage-cbre-project-management-certificate.png" class="certificate-image" alt="CBRE PM" />
+          <img src="Achievements/forage-cbre-project-management-certificate.png" class="certificate-image" alt="CBRE Project Management" />
         </a>
       </article>
 
@@ -211,7 +217,7 @@
         <h3>Software Engineer Skill Certification</h3>
         <div class="achievement-meta">HackerRank</div>
         <p class="achievement-learned">
-          Validated core software engineering and problem-solving skills.
+          Validated core software engineering skills, including problem-solving and code quality.
         </p>
         <a href="Achievements/hackerrank-software-engineer-certificate.pdf">
           <img src="Achievements/hackerrank-software-engineer-certificate.png" class="certificate-image" alt="HackerRank Software Engineer" />
@@ -238,10 +244,10 @@
         <h3>Introduction to Transformer-Based NLP</h3>
         <div class="achievement-meta">NVIDIA</div>
         <p class="achievement-learned">
-          Learned the fundamentals of transformer architectures and attention mechanisms used in modern NLP.
+          Learned the fundamentals of transformer architectures and attention mechanisms used in modern NLP systems.
         </p>
         <a href="Achievements/nvidia-transformer-nlp-certificate.pdf">
-          <img src="Achievements/nvidia-transformer-nlp-certificate.png" class="certificate-image" alt="NVIDIA NLP" />
+          <img src="Achievements/nvidia-transformer-nlp-certificate.png" class="certificate-image" alt="NVIDIA Transformer NLP" />
         </a>
       </article>
     </section>
