Update achievements.html 9

--- a/achievements.html
+++ b/achievements.html
@@ -52,7 +52,7 @@
     }
 
     .achievement-card {
-      max-width: 620px; /* larger on laptop */
+      max-width: 620px;
       margin: 0 auto 48px;
       padding: 32px;
       background: #ffffff;
@@ -100,7 +100,6 @@
 
 <body>
 
-  <!-- Mobile hamburger -->
   <button class="hamburger" id="hamburger">☰</button>
 
   <aside class="mobile-menu" id="mobileMenu">
@@ -112,7 +111,6 @@
     <a href="contact.html">Contact</a>
   </aside>
 
-  <!-- Desktop nav -->
   <nav class="desktop-nav">
     <a href="index.html">Home</a>
     <a href="resume.html">Resume</a>
@@ -135,7 +133,10 @@
           including SAP Business AI Core and production-ready AI workflows.
         </p>
         <img src="Achievements/sap-generative-ai-developer-badge.png" alt="SAP Generative AI Developer" />
-        <a class="pdf-link" href="Achievements/sap-generative-ai-developer-certificate.pdf">View certificate (PDF)</a>
+        <a class="pdf-link"
+           href="certificate-viewer.html?file=Achievements/sap-generative-ai-developer-certificate.pdf">
+          View certificate (PDF)
+        </a>
       </div>
     </section>
 
@@ -150,7 +151,10 @@
           responsible AI practices, and real-world applications.
         </p>
         <img src="Achievements/ibm-getting-started-generative-ai-badge.png" alt="IBM Generative AI" />
-        <a class="pdf-link" href="Achievements/ibm-getting-started-generative-ai-certificate.pdf">View certificate (PDF)</a>
+        <a class="pdf-link"
+           href="certificate-viewer.html?file=Achievements/ibm-getting-started-generative-ai-certificate.pdf">
+          View certificate (PDF)
+        </a>
       </div>
 
       <div class="achievement-card">
@@ -160,7 +164,10 @@
           generation using real-world business scenarios.
         </p>
         <img src="Achievements/forage-tata-genai-data-analytics-certificate.png" alt="Forage Tata GenAI" />
-        <a class="pdf-link" href="Achievements/forage-tata-genai-data-analytics-certificate.pdf">View certificate (PDF)</a>
+        <a class="pdf-link"
+           href="certificate-viewer.html?file=Achievements/forage-tata-genai-data-analytics-certificate.pdf">
+          View certificate (PDF)
+        </a>
       </div>
 
       <div class="achievement-card">
@@ -170,7 +177,10 @@
           across structured business cases.
         </p>
         <img src="Achievements/forage-bcgx-genai-certificate.png" alt="BCG X GenAI" />
-        <a class="pdf-link" href="Achievements/forage-bcgx-genai-certificate.pdf">View certificate (PDF)</a>
+        <a class="pdf-link"
+           href="certificate-viewer.html?file=Achievements/forage-bcgx-genai-certificate.pdf">
+          View certificate (PDF)
+        </a>
       </div>
 
       <div class="achievement-card">
@@ -180,7 +190,10 @@
           and analytical modeling techniques.
         </p>
         <img src="Achievements/forage-british-airways-data-science-certificate.png" alt="British Airways DS" />
-        <a class="pdf-link" href="Achievements/forage-british-airways-data-science-certificate.pdf">View certificate (PDF)</a>
+        <a class="pdf-link"
+           href="certificate-viewer.html?file=Achievements/forage-british-airways-data-science-certificate.pdf">
+          View certificate (PDF)
+        </a>
       </div>
 
       <div class="achievement-card">
@@ -190,7 +203,10 @@
           enterprise environments.
         </p>
         <img src="Achievements/forage-siemens-mobility-project-management-certificate.png" alt="Siemens Mobility PM" />
-        <a class="pdf-link" href="Achievements/forage-siemens-mobility-project-management-certificate.pdf">View certificate (PDF)</a>
+        <a class="pdf-link"
+           href="certificate-viewer.html?file=Achievements/forage-siemens-mobility-project-management-certificate.pdf">
+          View certificate (PDF)
+        </a>
       </div>
 
       <div class="achievement-card">
@@ -200,7 +216,10 @@
           stakeholder coordination and delivery planning.
         </p>
         <img src="Achievements/forage-cbre-project-management-certificate.png" alt="CBRE PM" />
-        <a class="pdf-link" href="Achievements/forage-cbre-project-management-certificate.pdf">View certificate (PDF)</a>
+        <a class="pdf-link"
+           href="certificate-viewer.html?file=Achievements/forage-cbre-project-management-certificate.pdf">
+          View certificate (PDF)
+        </a>
       </div>
 
       <div class="achievement-card">
@@ -210,7 +229,10 @@
           solving, design thinking, and implementation.
         </p>
         <img src="Achievements/hackerrank-software-engineer-certificate.png" alt="HackerRank SE" />
-        <a class="pdf-link" href="Achievements/hackerrank-software-engineer-certificate.pdf">View certificate (PDF)</a>
+        <a class="pdf-link"
+           href="certificate-viewer.html?file=Achievements/hackerrank-software-engineer-certificate.pdf">
+          View certificate (PDF)
+        </a>
       </div>
 
       <div class="achievement-card">
@@ -220,7 +242,10 @@
           structures, control flow, and basic algorithms.
         </p>
         <img src="Achievements/hackerrank-python-basic-certificate.png" alt="HackerRank Python" />
-        <a class="pdf-link" href="Achievements/hackerrank-python-basic-certificate.pdf">View certificate (PDF)</a>
+        <a class="pdf-link"
+           href="certificate-viewer.html?file=Achievements/hackerrank-python-basic-certificate.pdf">
+          View certificate (PDF)
+        </a>
       </div>
     </section>
 
@@ -235,7 +260,10 @@
           applications in modern natural language processing systems.
         </p>
         <img src="Achievements/nvidia-transformer-nlp-certificate.png" alt="NVIDIA Transformer NLP" />
-        <a class="pdf-link" href="Achievements/nvidia-transformer-nlp-certificate.pdf">View certificate (PDF)</a>
+        <a class="pdf-link"
+           href="certificate-viewer.html?file=Achievements/nvidia-transformer-nlp-certificate.pdf">
+          View certificate (PDF)
+        </a>
       </div>
     </section>
 
